@@ -134,6 +134,11 @@ function ignore_file(name)
    if (string.find(name, "^.cdv/")) then return true end
    if (string.find(name, "^.git/")) then return true end
    if (string.find(name, "%.scc$")) then return true end
+   -- desktop/directory configuration metadata
+   if (string.find(name, "^.DS_Store$")) then return true end
+   if (string.find(name, "/.DS_Store$")) then return true end
+   if (string.find(name, "^desktop.ini$")) then return true end
+   if (string.find(name, "/desktop.ini$")) then return true end
    return false;
 end
 
